--- a/app/users/templates/index.html
+++ b/app/users/templates/index.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>OAuth Demo</h1>
-  {% if current_user.is_authenticated %}
-  <h2>Hi, {{ current_user.screen_name }}!</h2>
-  <p><a href="{{ url_for('logout') }}">Logout</a></p>
-  {% else %}
-  <h2>I don't know you!</h2>
-  <p><a href="{{ url_for('login') }}">Login</a></p>
-  <p><a href="{{ url_for('register') }}">Register</a></p>
-  {% endif %}
+   {% if current_user.is_authenticated %}
+        <h2 class="lead">Hi, {{ current_user.first_name }}!</h2>
+        <p><a class="btn btn-default" href="{{ url_for('logout') }}">Logout</a></p>
+    {% else %}
+        <p><a class="btn btn-block btn-social btn-facebook" href="{{ url_for('facebook_authorize') }}">
+            <span class="fa fa-facebook"></span>
+            Login with Facebook</a></p>
+    {% endif %}
 {% endblock %}
 </body>
 </html>
