--- a/app/users/templates/index.html
+++ b/app/users/templates/index.html
@@ -2,12 +2,15 @@
 {% block content %}
   <h1>OAuth Demo</h1>
    {% if current_user.is_authenticated %}
-        <h2 class="lead">Hi, {{ current_user.first_name }}!</h2>
-        <p><a class="btn btn-default" href="{{ url_for('logout') }}">Logout</a></p>
-    {% else %}
-        <p><a class="btn btn-block btn-social btn-facebook" href="{{ url_for('facebook_authorize') }}">
-            <span class="fa fa-facebook"></span>
-            Login with Facebook</a></p>
+        <h2>Hi, {{ current_user.nickname }}!</h2>
+            <p><a href="{{ url_for('users.logout') }}">Logout</a></p>
+        {% else %}
+            <h2>I don't know you!</h2>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='twitter') }}">Login with Twitter</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='linkedin') }}">Login with LinkedIn</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='github') }}">Login with Github</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='google') }}">Login with Google+</a></p>
     {% endif %}
 {% endblock %}
 </body>
