--- a/app/users/templates/my-logins.html
+++ b/app/users/templates/my-logins.html
@@ -10,8 +10,8 @@
     <div class="col-md-4 col-md-offset-2">
      {% if current_user.is_authenticated %}
      <h2 class="lead">Hi, {{ current_user.screen_name }}!</h2>
-     <p><a class="btn btn-default" href="{{ url_for('logout') }}">Logout</a></p>
-     <form action="{{ url_for('delete_user') }}" method="post">
+     <p><a class="btn btn-default" href="{{ url_for('users.logout') }}">Logout</a></p>
+     <form action="{{ url_for('users.delete_user') }}" method="post">
        <button class="btn btn-danger" type="submit">Delete Account</button>
      </form>
      <div class="row">
@@ -40,7 +40,7 @@
             <p>External accounts available to connect:</p>
               {% for provider in unconnected_providers %}
                 <a class="btn btn-block btn-social btn-{{provider.name}}"
-                  href="{{ url_for('oauth_authorize', provider=provider.name) }}">
+                  href="{{ url_for('users.oauth_authorize', provider=provider.name) }}">
                   <span class="fa fa-{{ provider.name }}"></span>
                   Add {{ provider.name }} login</a>
               {% endfor %}
@@ -70,7 +70,7 @@
      <td>{{ todo.creation_date }}</td>
      <td>{{ todo.deadline_date}}</td>
      <td>
-       <form id="isdone" action="{{ url_for('mark_done', todo_id=todo.id) }}" method="post">
+       <form id="isdone" action="{{ url_for('users.mark_done', todo_id=todo.id) }}" method="post">
          <input class="btn btn-xs btn-default" type="submit" name="mark_done" value="Done"{% if todo.is_done %} disabled{% endif %}/>
        </form>
      </td>
@@ -80,7 +80,7 @@
   {% else %}
     <h3 class="lead">No Todos Yet</h3>
   {% endif %}
-      <a class="btn btn-success" href="{{ url_for('new_todo') }}">New todo</a>
+      <a class="btn btn-success" href="{{ url_for('users.new_todo') }}">New todo</a>
     </div>
   </div>
 {% else %}
