--- a/app/users/templates/index.html
+++ b/app/users/templates/index.html
@@ -2,8 +2,9 @@
 {% block content %}
   <h1>OAuth Demo</h1>
    {% if current_user.is_authenticated %}
-        <h2>Hi, {{ current_user.nickname }}!</h2>
+        <h2>Hi, {{ current_user.screen_name }}!</h2>
             <p><a href="{{ url_for('users.logout') }}">Logout</a></p>
+            <p><a href="{{ url_for('users.add_login_page') }}">my-logins</a></p>
         {% else %}
             <h2>I don't know you!</h2>
             <p><a href="{{ url_for('users.oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
@@ -11,6 +12,8 @@
             <p><a href="{{ url_for('users.oauth_authorize', provider='linkedin') }}">Login with LinkedIn</a></p>
             <p><a href="{{ url_for('users.oauth_authorize', provider='github') }}">Login with Github</a></p>
             <p><a href="{{ url_for('users.oauth_authorize', provider='google') }}">Login with Google+</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='foursquare') }}">Login with FourSquare</a></p>
+            <p><a href="{{ url_for('users.oauth_authorize', provider='reddit') }}">Login with Reddit</a></p>
     {% endif %}
 {% endblock %}
 </body>
