--- a/app/rest/templates/front_page/front_page_base.html
+++ b/app/rest/templates/front_page/front_page_base.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
 </head> 
 <body>
-    {% include "nav.html" %}
+    {% include "front_page/front_page_nav.html" %}
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
       <ul class="list-unstyled">
