--- a/app/users/templates/profile.html
+++ b/app/users/templates/profile.html
@@ -7,9 +7,10 @@
     <div class="col-md-12" style="height:100px"></div>
   </div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-md-4">
      {% if current_user.is_authenticated %}
      <h2 class="lead">Hi, {{ current_user.screen_name }}!</h2>
+     <img src="{{ current_user.avatar }}" width="150">
      <p><a class="btn btn-default" href="{{ url_for('users.logout') }}">Logout</a></p>
      <form action="{{ url_for('users.delete_user') }}" method="post">
        <button class="btn btn-danger" type="submit">Delete Account</button>
@@ -17,7 +18,7 @@
      <div class="row">
       <div class="col-md-8 ">
         <div class="form-group">
-          <div class="col-md-offset-5">
+          
             {% if connected_providers|count > 0 %}
               <h3 class="lead">External logins associated with your account:</h3>
               {% for provider in connected_providers %}
@@ -28,14 +29,14 @@
            {% else %}
            <h3 class="lead"></h3>
            {% endif %}
-         </div>
+         
        </div>
      </div>
    </div>
    <div class="row">
     <div class="col-md-8">
       <div class="form-group">
-        <div class="col-md-offset-5">
+       
           {% if connected_provider|count < 5 %}
             <p>External accounts available to connect:</p>
               {% for provider in unconnected_providers %}
@@ -47,7 +48,7 @@
           {% else %}
           <p></p>
           {% endif %}
-        </div>
+        
       </div>
     </div>
   </div>
