--- a/app/rest/templates/city_page.html
+++ b/app/rest/templates/city_page.html
@@ -5,7 +5,7 @@ city_page.html which has restaurants listed<br>
 <p>number of restaurants: {{ rest_total }}</p>#}
 
 {% for r in rest.items %}
-    <a href="{{ url_for('rest_page_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_metro_id=city_metro_id, url_slug_rest=r.url_slug_rest, rest_id=r.id) }}">{{ r.rest_name }}</a><br>
+    <a href="{{ url_for('rest_page_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_rest=r.url_slug_rest, rest_id=r.id) }}">{{ r.rest_name }}</a><br>
     {{ r.address }}<br>
     {{ r.city_ }}, {{ r.state_ }} {{ r.zip_ }}<br>
     {{ r.phone }}<br>
@@ -21,30 +21,30 @@ city_page.html which has restaurants listed<br>
 <nav>
    <ul class="pagination pagination-lg">
     {% if rest.has_prev %}
-    <li><a href="{{ url_for('city_page', url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_metro_id=city_metro_id, page=rest.prev_num) }}">Previous</a></li>
+    <li><a href="{{ url_for('city_page', url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_id=city_id, page=rest.prev_num) }}">Previous</a></li>
     {% else %}
     <li><a class="btn disabled">Previous</a></li>
     {% endif %} 
     {% for page in rest.iter_pages() %}
     {% if page %}
     {% if page != rest.page %}
-    <li><a class="btn btn-default" href="{{ url_for('city_page',url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_metro_id=city_metro_id, page=page) }}">{{ page }}</a></li>
+    <li><a class="btn btn-default" href="{{ url_for('city_page',url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_id=city_id, page=page) }}">{{ page }}</a></li>
     {% else %}
-    <li><a class="btn btn-info active" href="{{ url_for('city_page',url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_metro_id=city_metro_id, page=page) }}">{{ page }}</a></li>
+    <li><a class="btn btn-info active" href="{{ url_for('city_page',url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_id=city_id, page=page) }}">{{ page }}</a></li>
     {% endif %}
     {% endif %}
     {% endfor %}
     {% if rest.has_next %}
-    <li><a href="{{ url_for('city_page', url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city ,city_metro_id=city_metro_id, page=rest.next_num) }}">Next</a></li>
+    <li><a href="{{ url_for('city_page', url_slug_state=url_slug_state ,state_id=state_id ,url_slug_city=url_slug_city, city_id=city_id, page=rest.next_num) }}">Next</a></li>
     {% else %}
     <li><a class="btn disabled">Next</a></li>
     {% endif %} 
   </ul>
 </nav>
 
-{% for r in rest_cusine %}
+{#{% for r in rest_cusine %}
     <a href="{{ url_for('page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_metro_id=city_metro_id, url_slug_cusine=r[1], cusine_id=r[2]) }}">{{ r[0] }}</a><br>
-{% endfor %}
+{% endfor %} #}
 
 
 
