--- a/app/rest/templates/base.html
+++ b/app/rest/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+
+  <meta charset="UTF-8">
   <title>Your page title here :)</title>
   <meta name="description" content="">
   <meta name="author" content="">
