--- a/app/rest/templates/city_page.html
+++ b/app/rest/templates/city_page.html
@@ -11,7 +11,7 @@ city_page.html which has restaurants listed<br>
     {{ r.phone }}<br>
     Menu: {{ r.text_menu_available }}<br>
       {% for x in r.cusine %}
-       <a href="{{ url_for('page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_metro_id=city_metro_id, url_slug_cusine=x.url_slug_cusine, cusine_id=x.id) }}">{{ x.name }}</a>,{{ x.id }} ,
+       <a href="{{ url_for('page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=x.url_slug_cusine, cusine_id=x.id) }}">{{ x.name }}</a>,{{ x.id }} ,
      {% endfor %}
     <hr>
     <br>
@@ -42,9 +42,9 @@ city_page.html which has restaurants listed<br>
   </ul>
 </nav>
 
-{#{% for r in rest_cusine %}
-    <a href="{{ url_for('page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_metro_id=city_metro_id, url_slug_cusine=r[1], cusine_id=r[2]) }}">{{ r[0] }}</a><br>
-{% endfor %} #}
+{% for r in rest_cusine %}
+    <a href="{{ url_for('page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=r.url_slug_cusine, cusine_id=r.id) }}">{{ r.name }}</a><br>
+{% endfor %} 
 
 
 
