--- a/app/templates/city/city_page.html
+++ b/app/templates/city/city_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block content %}
 city_page.html which has restaurants listed<br>
 {#<h2>{{ city_name }}</h2>
