--- a/app/rest/templates/front_page/index.html
+++ b/app/rest/templates/front_page/index.html
@@ -1,4 +1,4 @@
-{% extends "front_page/front_page_base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <div class="container">
     <div class="row">
