--- a/app/rest/templates/base/base.html
+++ b/app/rest/templates/base/base.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
 </head> 
 <body>
-    {% include "nav.html" %}
+    {% include "base/nav.html" %}
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
       <ul class="list-unstyled">
