--- a/app/rest/templates/page_cusine_city.html
+++ b/app/rest/templates/page_cusine_city.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block content %}
 cusine_page_city.html<br>
 <h2>Cusine Type: {{ cusine_name }}</h2>
