--- a/app/rest/templates/state/state_page.html
+++ b/app/rest/templates/state/state_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block content %}
 state_page which has cities listed
 <h1>{{ state_name }}, {{ state_id }}</h1>
