--- a/app/templates/base/nav.html
+++ b/app/templates/base/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,13 +10,10 @@
       <a class="navbar-brand" href="{{ url_for('rest.index') }}"><img src="/static/img/eaterific_nav.png"></a>
       <!-- <a class="navbar-brand" href="#">Eaterific</a> -->
     </div>
-    {% if request.endpoint.endswith('index') %}
-        
-      {% else %}
-      {% include "base/search_bar_nav.html" %}
-    {% endif %}
+      
+    
        <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-right">
+    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
       <ul class="nav navbar-nav">
         {% if current_user.is_authenticated %}
        
@@ -31,10 +28,11 @@
           </ul>
         </li>
         {% else %}
+    
          
           <li><a href="{{ url_for('users.login') }}">Login</a></li>
           <li><a href="{{ url_for('users.register') }}">Register</a></li>
-         
+      
         {% endif %}
       </ul>
     </div>
