--- a/app/templates/base/search_bar_nav.html
+++ b/app/templates/base/search_bar_nav.html
@@ -1,4 +1,4 @@
-<form class="navbar-form navbar-left">
+<form class="navbar-form navbar-left search">
   <div class="form-group">
     <label class="sr-only">Search</label>
     <div class="input-group">
