--- a/app/templates/base/_helper_macro.html
+++ b/app/templates/base/_helper_macro.html
@@ -2,11 +2,12 @@
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
-    <ul class=errors>
+    <ul class="errors">
     {% for error in field.errors %}
       <li>{{ error }}</li>
     {% endfor %}
     </ul>
   {% endif %}
   </dd>
+ </dt>
 {% endmacro %}
