--- a/app/users/templates/register.html
+++ b/app/users/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}Register New User{% endblock %}
 {% block content %}
 {% from "_macros.html" import render_field_with_errors, render_field %}
