--- a/app/rest/templates/front_page/index.html
+++ b/app/rest/templates/front_page/index.html
@@ -6,13 +6,13 @@
 		<h1>USA</h1>
 		{% for i in state %}
 			{% if i.id < 52 %}
-				<a href="{{ url_for('state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
+				<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
 			{% endif %}
 		{% endfor %}
 		<h1>Canada</h1>
 		{% for i in state %}
 			{% if i.id > 51 %}
-				<a href="{{ url_for('state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
+				<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
 			{% endif %}
 		{% endfor %}
 		</div>
