--- a/app/rest/templates/search_zip.html
+++ b/app/rest/templates/search_zip.html
@@ -1,6 +1,9 @@
 {% extends "base/base.html" %}
 {% block content %}
-search zip page<br>
-
-{% include "base/city_list.html" %}
+<div class="row">
+	<div class="col-md-12">
+		search zip page<br>
+		{% include "base/city_list.html" %}
+	</div>
+</div>
 {% endblock %}
