--- a/app/rest/templates/city/city_page.html
+++ b/app/rest/templates/city/city_page.html
@@ -1,18 +1,14 @@
 {% extends "base/base.html" %}
 {% block content %}
-city_page.html which has restaurants listed<br>
-{#<h2>{{ city_name }}</h2>
-<p>number of restaurants: {{ rest_total }}</p>#}
-
-{% include "base/city_list.html" %}
-
-{% for r in rest_cusine %}
-    <a href="{{ url_for('rest.page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=r.url_slug_cusine, cusine_id=r.id) }}">{{ r.name }}</a><br>
-{% endfor %} 
-
-
-
-
-
-
+<div class="row">
+	<div class="col-md-12">
+		city_page.html which has restaurants listed<br>
+		{#<h2>{{ city_name }}</h2>
+		<p>number of restaurants: {{ rest_total }}</p>#}
+		{% include "base/city_list.html" %}
+		{% for r in rest_cusine %}
+		    <a href="{{ url_for('rest.page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=r.url_slug_cusine, cusine_id=r.id) }}">{{ r.name }}</a><br>
+		{% endfor %} 
+	</div>
+</div>
 {% endblock %}
