--- a/app/rest/templates/page_cusine_city.html
+++ b/app/rest/templates/page_cusine_city.html
@@ -1,18 +1,20 @@
 {% extends "base/base.html" %}
 {% block content %}
-cusine_page_city.html<br>
-<h2>Cusine Type: {{ cusine_name }}</h2>
-{% for i in rest_c %}
-    <a href="{{ url_for('rest.rest_page_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_rest=i.url_slug_rest, rest_id=i.id )}}">{{ i.rest_name }}</a><br>
-     {{ i.address }}<br>
-    {{ i.city_ }}, {{ i.state_ }} {{ i.zip_ }}<br>
-    {{ i.phone }}<br>
-    Menu: {{ i.text_menu_available }}<br>
-      {% for x in i.cusine %}
-       <a href="{{ url_for('rest.page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=x.url_slug_cusine, cusine_id=x.id) }}">{{ x.name }}</a>,{{ x.id }} ,
-     {% endfor %}
-<hr>
-{% endfor %}
-
-
+<div class="row">
+	<div class="col-md-12">
+	cusine_page_city.html<br>
+	<h2>Cusine Type: {{ cusine_name }}</h2>
+		{% for i in rest_c %}
+			<a href="{{ url_for('rest.rest_page_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_rest=i.url_slug_rest, rest_id=i.id )}}">{{ i.rest_name }}</a><br>
+ 			{{ i.address }}<br>
+			{{ i.city_ }}, {{ i.state_ }} {{ i.zip_ }}<br>
+			{{ i.phone }}<br>
+			Menu: {{ i.text_menu_available }}<br>
+  			{% for x in i.cusine %}
+   				<a href="{{ url_for('rest.page_cusine_city', url_slug_state=url_slug_state, state_id=state_id, url_slug_city=url_slug_city, city_id=city_id, url_slug_cusine=x.url_slug_cusine, cusine_id=x.id) }}">{{ x.name }}</a>,{{ x.id }} ,
+ 			{% endfor %}
+			<hr>
+		{% endfor %}
+	</div>
+</div>
 {% endblock %}
