--- a/app/users/templates/error.html
+++ b/app/users/templates/error.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Error!!!! Something went wrong.</h1>
+<div class="row">
+	<div class="col-md-12">
+		<h1>Error!!!! Something went wrong.</h1>
+	</div>
+</div>
 {% endblock %}
