--- a/app/users/templates/profile.html
+++ b/app/users/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% from 'macros.html' import icon %}
 {% block content %}
 <div class="row">
