--- a/app/rest/templates/state/state_page.html
+++ b/app/rest/templates/state/state_page.html
@@ -1,22 +1,26 @@
 {% extends "base/base.html" %}
 {% block content %}
+<br><br><br><br>state_page which has cities listed col-md-offset-2
 <div class="row">
-<div class="col-md-10 col-md-offset-2">
-	<br><br><br><br>state_page which has cities listed
+	<div class="col-md-12">
 	<h1>{{ state_name }}, {{ state_id }}</h1>
+<div class="row">
 	{% for c in county %}
+	<div class="col-md-3">
 	<h3>{{ c.name }}, {{ c.id }}</h3>
 		{% for s in city_metro %}
 			{% if s.county_id == c.id %}
-				<a href="{{ url_for('rest.city_page',url_slug_state=url_slug_state,state_id=state_id, url_slug_city=s.url_slug_city, city_id=s.id,page=1) }}"> {% if s.neighborhood_name %}{{ s.neighborhood_name }}{% else %}{{ s.city_name }}{% endif %}</a> ,{{ s.county_id }} {{ s.id }} # of restaurants {{ s.r_total }}
+				<p><a href="{{ url_for('rest.city_page',url_slug_state=url_slug_state,state_id=state_id, url_slug_city=s.url_slug_city, city_id=s.id,page=1) }}">{% if s.neighborhood_name %}{{ s.neighborhood_name }}{% else %}{{ s.city_name }}{% endif %}</a> restaurants {{ s.r_total }}</p>
 			{% endif %}
 		{% endfor %}
+	</div>
 	{% endfor %}
+</div>
+</div>
+</div>
 
 	{% for c in canada %}
 		<a href="{{ url_for('rest.city_page',url_slug_state=url_slug_state,state_id=state_id, url_slug_city=c.url_slug_city, city_id=c.id, page=1) }}"> {% if c.neighborhood_name %}{{ c.neighborhood_name }}{% else %}{{ c.city_name }}{% endif %}</a>, {{ c.id }} # of restaurants {{ c.r_total }}
 	{% endfor %}
 
-</div>
-</div>
 {% endblock %}
