--- a/app/rest/templates/front_page/index.html
+++ b/app/rest/templates/front_page/index.html
@@ -1,13 +1,14 @@
 {% extends "base/base.html" %}
 {% block content %}
-
+<div class="row">
+<div class="col-9 offset-2">
 
 <h1>USA</h1>
 <div class="row">
 	{% for i in state %}
 		{% if i.id < 52 %}
 		<div class="col-3">
-			<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
+			<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a>
 		</div>
 		{% endif %}
 	{% endfor %}
@@ -17,10 +18,26 @@
 	{% for i in state %}
 		{% if i.id > 51 %}
 		<div class="col-3">
-			<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a><br>
+			<a href="{{ url_for('rest.state_page',url_slug_state=i.url_slug_state, state_id=i.id) }}">{{ i.name }}</a>
 		</div>
 		{% endif %}
 	{% endfor %}
 </div>		
-	
+</div>
+</div>
+<div class="row">
+	<div class="col-9 offset-2">
+{%- for row in state|batch(4, '&nbsp;') %}
+  <div class="col-3">
+  {%- for column in row %}
+    <p>{{ column.name }}</p>
+  {#{% if column.id|int == 52|int %}#}
+  	
+  {#{% endif %}#}
+    
+  {%- endfor %}
+  </div>
+{%- endfor %}
+</div>
+</div>
 {% endblock %}
